filter ticket, check uncheck box
filter ticket, check uncheck box

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,381 @@ flex: none;
 order: 0;
 flex-grow: 0;
 }
+.control-filter{
+  position: absolute;
+  width: 156px;
+  height: 26px;
+  left: 24px;
+  top: 84px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+
+  display: flex;
+
+  color: #1E0D03;
+
+  opacity: 0.8;
+}
+.control-filter-heading{
+  position: absolute;
+  width: 81px;
+  height: 30px;
+  left: 24px;
+  top: 22px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+
+  color: #1E0D03;
+}
+.control-filter-options{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+
+  position: absolute;
+  width: 144px;
+  height: 96px;
+  left: 206px;
+  top: 85px;
+}
+.control-ticket-type-filter-label{
+  position: absolute;
+  width: 58px;
+  height: 26px;
+  left: 24px;
+  top: 205px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+
+  display: flex;
+  align-items: center;
+
+  color: #1E0D03;
+
+  opacity: 0.8;
+}
+.control-ticket-type-filter-input{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+
+  position: absolute;
+  width: 66px;
+  height: 20px;
+  left: 206px;
+  top: 190px;
+}
+.control-fromdate-filter-label{
+  position: absolute;
+  width: 66px;
+  height: 26px;
+  left: 24px;
+  top: 255px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+
+  display: flex;
+  align-items: center;
+
+  color: #1E0D03;
+
+  opacity: 0.8;
+}
+.control-fromdate-filter-input{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 16px;
+  gap: 28px;
+
+  position: absolute;
+  width: 150px;
+  height: 26px;
+  left: 206px;
+  top: 250px;
+
+  /* Grey/3 */
+
+  background: #E0E0E0;
+  border-radius: 8px;
+}
+.control-todate-filter-label{
+  position: absolute;
+  width: 80px;
+  height: 26px;
+  left: 24px;
+  top: 321px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+
+  color: #1E0D03;
+
+  opacity: 0.8;
+}
+.control-todate-filter-input{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 16px;
+  gap: 27px;
+
+  position: absolute;
+  width: 150px;
+  height: 26px;
+  left: 206px;
+  top: 314px;
+
+  background: #F7F8FB;
+  border-radius: 8px;
+}
+
+.filter-button{
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 11px 24px;
+  font-size: 18px;
+  background-color: #FFFFFF;
+  color:#FF993C ;
+  
+  font-weight: 700;
+  
+  line-height: 26px;
+
+  position: absolute;
+  width: 160px;
+  height: 48px;
+  left: 136px;
+  top: 386px;
+
+  border: 2px solid #FF993C;
+  border-radius: 8px;
+}
+.radio-row{
+  display: flex;
+  flex-direction: row;
+  padding: 0px;
+
+  width: 100%;
+  height: 24px;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.filter-heading{
+  position: absolute;
+  width: 81px;
+  height: 30px;
+  left: 263px;
+  top: 24px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+
+  display: flex;
+  align-items: center;
+  color: #1E0D03;
+}
+.status-filter{
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+
+  position: absolute;
+  width: 573px;
+  height: 24px;
+  left: 32px;
+  top: 203px;
+}
+.check-in-gate-filter{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+
+  position: absolute;
+  width: 100%;
+  height: 24px;
+  left: 32px;
+  top: 281px;
+}
+.loc{
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 11px 24px;
+  gap: 10px;
+  background: #FFFFFF;
+  font-weight: 600;
+  color: #FF993C;
+  position: absolute;
+  width: 160px;
+  height: 48px;
+  left:45px;
+  bottom: 23px;
+
+  border: 2px solid #FF993C;
+  border-radius: 8px;
+}
+.check-in-label-filter{
+  position: absolute;
+  width: 131px;
+  height: 26px;
+  left: 32px;
+  top: 247px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+
+  display: flex;
+  align-items: center;
+
+  color: #1E0D03;
+
+  opacity: 0.8;
+}
+.fromdate-label{
+  position: absolute;
+  width: 66px;
+  height: 26px;
+  left: 32px;
+  top: 81px;
+  
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  
+  display: flex;
+  align-items: center;
+  
+  color: #1E0D03;
+  
+  opacity: 0.7;
+}
+.fromdate-input{
+  box-sizing: border-box;
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 12px;
+  gap: 10px;
+  
+  position: absolute;
+  width: 143px;
+  height: 40px;
+  left: 32px;
+  top: 112px;
+  
+  border: 1px solid #A5A8B1;
+  border-radius: 8px;
+}
+.todate-label{
+  position: absolute;
+  width: 128px;
+  height: 26px;
+  left: 297px;
+  top: 80px;
+  
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  
+  display: flex;
+  align-items: center;
+  
+  color: #1E0D03;
+  
+  opacity: 0.7;
+}
+.todate-input{
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 12px;
+  gap: 10px;
+
+  position: absolute;
+  width: 143px;
+  height: 40px;
+  left: 297px;
+  top: 112px;
+
+  border: 1px solid #A5A8B1;
+  border-radius: 8px;
+}
+.status-text-filter{
+  position: absolute;
+  width: 159px;
+  height: 26px;
+  left: 32px;
+  top: 172px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+
+  display: flex;
+  align-items: center;
+
+  color: #1E0D03;
+
+  opacity: 0.8;
+}
 .menu{
   display: flex;
   flex-direction: column;
@@ -430,6 +805,19 @@ color: #1E0D03;
   position: relative;
   width: 758px;
   height: 628px;
+  margin: auto;
+  margin-top: 10%;
+
+  background: #FFFFFF;
+  border: 0px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 16px;
+}
+.filter-ticket{
+  box-sizing: border-box;
+  position: relative;
+  width: 634px;
+  height: 454px;
   margin: auto;
   margin-top: 10%;
 
